# app-padaria

./: README.md  app.py  pyproject.toml
instance/: padaria.db
templates/: base.html  cadastrar.html  editar.html  index.html  produtos.html
