[tool.poetry]
name = "devwebbootstrap - template cod pronto"
version = "0.1.0"
description = ""
authors = ["Luís Rigo <luisrigo2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.31"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
